Add Personal Finance Dashboard project to portfolio

--- a/index.html
+++ b/index.html
@@ -181,6 +181,19 @@
               </div>
             </div>
           </article>
+          <article class="card project">
+            <div class="thumb" aria-hidden="true">
+              <img src="assets/personal_finance_pic.png" alt="Personal Finance Dashboard screenshot" style="width:100%;height:100%;object-fit:cover">
+            </div>
+            <div class="content">
+              <h4>Personal Finance Dashboard</h4>
+              <p>A comprehensive React application for tracking personal finances, investment portfolio, and progress toward financial independence.</p>
+              <div class="tags"><span>React</span><span>Vite</span><span>Tailwind</span><span>shadcn/ui</span><span>Recharts</span><span>Express</span></div>
+              <div class="actions">
+                <a class="btn small" href="https://github.com/ricardobinz/personal-finance-dashboard" target="_blank" rel="noopener">GitHub</a>
+              </div>
+            </div>
+          </article>
         </div>
       </div>
     </section>
